Added User and Business Controllers

--- a/src/api/WebApi/WebApi.csproj
+++ b/src/api/WebApi/WebApi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>a1d39863-3346-4386-af44-26eab158d2cf</UserSecretsId>
   </PropertyGroup>
