--- a/src/web/package.json
+++ b/src/web/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuepic/vue-datepicker": "^5.3.0",
+    "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
